[gd_scene load_steps=4 format=3 uid="uid://dar8x603y2x4"]

[ext_resource type="Script" path="res://scripts/leilao_ui.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://c3kgpi1ijacaa" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popup"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LeilaoUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Content"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_popup")

[node name="VBoxContainer" type="VBoxContainer" parent="Content/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LabelTitulo" type="Label" parent="Content/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Leilão"
horizontal_alignment = 1

[node name="LabelLance" type="Label" parent="Content/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Lance Atual: R$ 0"
horizontal_alignment = 1

[node name="LabelVencedor" type="Label" parent="Content/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Vencedor Atual: Ninguém"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ContainerBotoes" type="HBoxContainer" parent="Content/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1
